--- a/localisation/english/MD_focus_TAJ_l_english.yml
+++ b/localisation/english/MD_focus_TAJ_l_english.yml
@@ -19,4 +19,13 @@
 
 # Tooltips
 
+ TAJ_russian_influence_hurt_TT: "[SOV.GetFlag] Russian §HInfluence Multiplier§! in [TAJ.GetFlag] Tajikistan: §G-25%§!"
+ TAJ_25_prod_every_state_TT: "Will increase §HProductivity§! in every state by §H25§!"
+ TAJ_tree_playable_if_not_democratic_TT: "This §HTree§! will be §HAvailable§! even if we §HChange Parties§!\n\nWe will §RNOT§! be able to disable §HElections§!\n\n§HEvents§! will appear that give §HPopularity§! to §HRandom Parties§!"
+ TAJ_one_party_state_TT: "Will become a §HOne-Party State§!"
+ TAJ_every_muslim_neighbor_TT: "Gives §H5% Influence§! on every §HMuslim§! Neighbor"
+ TAJ_requires_mechanic_TT: "§RCOME BACK TO THIS: MECHANIC REQUIRED FIRST§!"
+ TAJ_integrate_agrarians_TT: "Will add §Y[TAJ.neutral_Social_L]§! into our coalition"
+ TAJ_unlock_pamir_core_decisions_TT: "£decision_icon_small §YUnlocks§! Pamir Integration §YDecisions§!"
+
 # Misc
