--- a/Changelog.txt
+++ b/Changelog.txt
@@ -111,6 +111,7 @@ v1.10.5
   - Redid political party names & descriptions for: PER, SAU, TUR, IRQ
   - Add and Replace tooltips of Chinese focuses for more readability
   - Fixed the localization for the "TAG" integrates TAG now properly
+  - Add Spanish Localization
 
  Modding Resources:
   - Added more detailed unit modifiers for main infantry battalions as well as org modifier for existing sub-unit modifiers
