Dutch Doctrine Tree

--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -157,6 +157,38 @@
  HOL_Commisariaat_Militaire_Productie: "Commisariaat Militaire Productie"
  HOL_Commisariaat_Militaire_Productie_desc: "The Commissariaat Militaire Productie focuses on coordinating and enhancing military production capabilities across the Netherlands. This initiative aims to streamline procurement processes, foster domestic defense industries, and ensure a steady supply of advanced military equipment."
  HOL_Commisariaat_Militaire_Productie_tt: "Add §HCommissariaat Militaire Productie§!, which grants ( £tax_gain_multiplier_modifier_texticon §YInternational Market Purchase§! Modifier: [?0.10|%+] , §YMilitary Factories§! Productivity: [?0.05|%+] , §YDockyards§! Productivity: [?0.05|%+] )"
+ # Doctrine
+ HOL_Dutch_Defense_Doctrine: "Nederlandse Defensie Doctrine"
+ HOL_Dutch_Defense_Doctrine_desc: "The Dutch Defense Doctrine lays the foundation for the strategic direction and operational principles of the Dutch Armed Forces. This doctrine emphasizes agility, firepower, and cooperation, ensuring that our military is prepared to defend national interests, support allies, and respond to global crises."
+ HOL_Authority_In_Information: "Authority in Information"
+ HOL_Authority_In_Information_desc: "Establishing an authoritative information position is key to maintaining a strategic advantage. This involves enhancing intelligence, surveillance, and reconnaissance capabilities to gather and process critical information efficiently."
+ HOL_Integrated_Actions: "Integrated Actions"
+ HOL_Integrated_Actions_desc: "Integrated actions across land, sea, air, cyber, and space domains ensure comprehensive defense capabilities. This focus promotes seamless coordination and joint operations to enhance overall military effectiveness."
+ HOL_Information_Based: "Information Based"
+ HOL_Information_Based_desc: "An information-based approach enhances decision-making and operational effectiveness. By investing in intelligence, surveillance, and reconnaissance capabilities, the Netherlands ensures it can respond swiftly and effectively to emerging threats."
+ HOL_Increase_Strategic_Capacity: "Increase Strategic Capacity"
+ HOL_Increase_Strategic_Capacity_desc: "Enhancing our strategic capacity is essential for addressing future challenges. This involves developing capabilities for strategic transport, cyber defense, and space operations, ensuring that the Netherlands can project power and influence globally."
+ HOL_Dutch_Specialism: "Dutch Specialism"
+ HOL_Dutch_Specialism_desc: "To strengthen our role within NATO, the Netherlands will develop specialized capabilities that complement the alliance's needs. This includes expertise in amphibious operations, air defense, and rapid deployment forces."
+ HOL_Invest_In_Europe: "Invest in Defense in Europe"
+ HOL_Invest_In_Europe_desc: "Investing in Europe's defense capabilities ensures a stronger and more resilient continent. The Netherlands will increase contributions to European defense initiatives, enhancing cooperation and interoperability with EU member states."
+ HOL_Military_Society: "Military Society Campaign"
+ HOL_Military_Society_desc: "Building a strong connection between the military and society is crucial. This focus includes initiatives to increase public engagement, support veterans, and foster a culture of defense awareness."
+ HOL_Reliable_Partner: "Reliable Dutch Partner"
+ HOL_Reliable_Partner_desc: "As a reliable partner and protector, the Netherlands will ensure the security of its allies and contribute to international stability. This involves active participation in NATO and EU missions and maintaining readiness to protect national and allied interests."
+ HOL_Unique_People: "Dutch Unique Personnel"
+ HOL_Unique_People_desc: "Recognizing and developing the unique skills of our personnel is vital. This focus emphasizes advanced training, education, and career development to ensure the armed forces have highly skilled and motivated individuals."
+ HOL_Flexible_Operations: "Flexible Operations"
+ HOL_Flexible_Operations_desc: "To remain agile and scalable, the armed forces must be able to respond rapidly to changing circumstances. This includes the development of rapid reaction forces and enhancing the mobility of troops to adapt quickly to various threat scenarios."
+ HOL_Innovative_Capacity: "Innovative Capacity"
+ HOL_Innovative_Capacity_desc: "Investing in research and development to maintain a strong innovative capacity is essential. This involves adopting cutting-edge technologies and fostering a culture of innovation to stay ahead of potential adversaries."
+ HOL_Escalation_Dominance: "Esclation Dominance"
+ HOL_Escalation_Dominance_desc: "Achieving escalation dominance requires superior military capabilities and robust strategic partnerships. This ensures that the armed forces can effectively deter and respond to conflicts at any level."
+ HOL_Technologisch_Hoogwaardig: "Technologisch Hoogwaardig"
+ HOL_Technologisch_Hoogwaardig_desc: "Investing in high-quality technology is essential for maintaining a modern and capable armed force. This focus includes adopting advanced systems and fostering innovation to keep the Netherlands at the forefront of military technology."
+ HOL_Defensievisie_Completed: "Defensievisie Completed"
+ HOL_Defensievisie_Completed_desc: "With the successful completion of the Dutch Defense Doctrine, the Dutch Armed Forces have undergone a remarkable transformation. Modernized, resilient, and equipped with state-of-the-art technology, the military stands ready to face the challenges of the future. This milestone reflects the dedication and hard work of our personnel, who have embraced innovation, strengthened international partnerships, and enhanced operational readiness"
+ # Navy
  HOL_Rijksregiebureau_Maritieme_Industrie: "Rijksregiebureau Martitieme Industrie"
  HOL_Rijksregiebureau_Maritieme_Industrie_desc: "The establishment of the Rijksregiebureau Maritieme Maakindustrie marks a significant step towards centralizing and coordinating the maritime manufacturing industry in the Netherlands. This agency will streamline efforts to innovate and expand shipbuilding and marine engineering capabilities, ensuring that Dutch maritime industries remain competitive and technologically advanced."
  HOL_Maritiem_Masterplan: "Maritiem Masterplan"
@@ -392,6 +424,32 @@
  HOL.Railway_Developments.2c.t: "Germany Accepts Betuwelijn Collaboration"
  HOL.Railway_Developments.2c.d: "Germany has agreed to work with the Netherlands on extending the Betuwelijn. This freight rail connection will significantly improve trade routes between the two countries, allowing for faster and more efficient movement of goods. With both nations committed to the project, construction will soon begin, marking a major step forward in regional trade and transport."
  HOL.Railway_Developments.2c.a: "Begin Construction of the Betuwelijn Extension"
+ HOL_Defense_Investment.ENG.t: "The Netherlands Proposes Investment in BAE Systems"
+ HOL_Defense_Investment.ENG.d: "The Netherlands has approached the UK government and BAE Systems with a proposal to invest in one of the largest defense contractors in Europe. The Dutch government aims to strengthen ties with the UK and access cutting-edge defense technology. This investment would benefit BAE Systems by providing additional capital for R&D and production, while fostering closer military cooperation between the Netherlands and the UK. Will we allow this Dutch investment?"
+ HOL_Defense_Investment.ENG.a: "Allow the Dutch to invest in BAE Systems"
+ HOL_Defense_Investment.ENG.b: "Reject the Dutch investment offer"
+ HOL_Defense_Investment.FRA.t: "The Netherlands Proposes Investment in Naval Group"
+ HOL_Defense_Investment.FRA.d: "The Dutch government has expressed interest in investing in Naval Group, France's leading naval defense company. The Netherlands seeks to bolster ties with France by contributing to the development of cutting-edge naval technologies. This investment would enhance Naval Group’s capabilities, providing new financial resources for research, shipbuilding, and development of advanced maritime systems. Should we accept the Dutch investment, deepening Franco-Dutch cooperation in defense?"
+ HOL_Defense_Investment.FRA.a: "Allow the Dutch to invest in Naval Group"
+ HOL_Defense_Investment.FRA.b: "Reject the Dutch investment offer"
+ HOL_Defense_Investment.ITA.t: "The Netherlands Proposes Investment in Leonardo"
+ HOL_Defense_Investment.ITA.d: "The Netherlands has offered to invest in Leonardo, one of Italy’s premier aerospace and defense companies. The Dutch government’s proposal highlights their desire to strengthen ties with Italy through joint projects in aviation and defense technology. This investment would provide Leonardo with valuable funding for advanced aerospace systems and defense projects. Should we allow the Netherlands to invest, fostering greater cooperation between Italy and the Netherlands?"
+ HOL_Defense_Investment.ITA.a: "Allow the Dutch to invest in Leonardo"
+ HOL_Defense_Investment.ITA.b: "Reject the Dutch investment offer"
+ HOL_Defense_Investment.GER.t: "The Netherlands Proposes Investment in Rheinmetall"
+ HOL_Defense_Investment.GER.d: "Rheinmetall has received an investment proposal from the Dutch government. The Netherlands seeks to deepen cooperation with Germany by investing in this leading defense contractor, particularly in the development of armored vehicles and military systems. The investment would provide Rheinmetall with additional resources to expand its production capabilities and further innovate in military technology. Should we approve the Dutch investment, enhancing cooperation between our defense sectors?"
+ HOL_Defense_Investment.GER.a: "Allow the Dutch to invest in Rheinmetall"
+ HOL_Defense_Investment.GER.b: "Reject the Dutch investment offer"
+ HOL_Defense_Investment.SWE.t: "The Netherlands Proposes Investment in Saab AB"
+ HOL_Defense_Investment.SWE.d: "The Dutch government has approached Saab AB with an investment proposal aimed at strengthening defense ties between Sweden and the Netherlands. The Netherlands hopes to contribute to Saab’s advanced aerospace and defense programs, particularly in areas such as fighter jets and missile systems. This investment would provide Saab with additional funding to accelerate development and innovation in its key areas. Should we allow this Dutch investment, further strengthening our partnership in defense?"
+ HOL_Defense_Investment.SWE.a: "Allow the Dutch to invest in Saab AB"
+ HOL_Defense_Investment.SWE.b: "Reject the Dutch investment offer"
+ HOL_Defense_Investment.Accept.t: "Dutch Defense Investment Accepted by [FROM.GetNameWithFlag]"
+ HOL_Defense_Investment.Accept.d: "The government of [FROM.GetNameWithFlag] has accepted the Dutch proposal to invest in their defense industry. This cooperation marks a significant step forward in strengthening our defense ties with [FROM.GetNameWithFlag] and securing access to advanced military technology. The Netherlands can now collaborate closely with [FROM.GetNameWithFlag]'s defense sector, enhancing both nations' military-industrial capabilities and contributing to Europe's overall defense preparedness."
+ HOL_Defense_Investment.Accept.a: "Celebrate the strengthened partnership"
+ HOL_Defense_Investment.Rejected.t: "Dutch Defense Investment Rejected by [FROM.GetNameWithFlag]"
+ HOL_Defense_Investment.Rejected.d: "The government of [FROM.GetNameWithFlag] has unfortunately rejected the Netherlands' proposal to invest in their defense industry. This decision limits our ability to deepen defense ties with [FROM.GetNameWithFlag] and gain access to critical military technologies. While this outcome is disappointing, we must look for alternative opportunities to strengthen our defense industry and partnerships elsewhere in Europe."
+ HOL_Defense_Investment.Rejected.a: "A setback, but we will move forward"
  ### Decisions
  HOL_ING_Group_strategy_category: "ING Group Strategies"
  HOL_ING_Group_strategy_category_desc: "As global economic cycles shift between periods of growth and recession, ING Bank is poised to capitalize on these fluctuations. Through a series of calculated financial maneuvers, ING can extend its influence over national and international markets, steering both recovery efforts and expansion booms. These decisions offer the Netherlands the ability to leverage the bank's financial clout to stimulate growth, manage risk, and maximize investment returns. By strategically adjusting loan policies, boosting consumer spending, and expanding global trade networks, ING will not only strengthen its market position but also solidify the Netherlands' standing as a financial powerhouse."
