Benelux Military Focus

--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -188,6 +188,13 @@
  HOL_Technologisch_Hoogwaardig_desc: "Investing in high-quality technology is essential for maintaining a modern and capable armed force. This focus includes adopting advanced systems and fostering innovation to keep the Netherlands at the forefront of military technology."
  HOL_Defensievisie_Completed: "Defensievisie Completed"
  HOL_Defensievisie_Completed_desc: "With the successful completion of the Dutch Defense Doctrine, the Dutch Armed Forces have undergone a remarkable transformation. Modernized, resilient, and equipped with state-of-the-art technology, the military stands ready to face the challenges of the future. This milestone reflects the dedication and hard work of our personnel, who have embraced innovation, strengthened international partnerships, and enhanced operational readiness"
+ # Air Force
+ HOL_Koninklijke_Luchtmacht: "Parvus Numero, Magnus Merito"
+ HOL_Koninklijke_Luchtmacht_desc: "Embrace the motto Parvus numero, magnus merito (Small in number, great in merit) by focusing on maximizing the efficiency and effectiveness of the Dutch Air Force. This involves optimizing training programs, improving maintenance procedures, and leveraging advanced technology to ensure that every aircraft and airman contributes significantly to the mission."
+ HOL_QRA_Benelux: "QRA Benelux"
+ HOL_QRA_Benelux_desc: "The Quick Reaction Alert (QRA) Benelux initiative is a joint air defense arrangement between Belgium, the Netherlands, and Luxembourg. This focus aims to enhance the readiness and coordination of the Dutch Air Force in protecting the airspace over the Benelux region, ensuring rapid response to any aerial threats."
+ HOL_BENECC: "BENECC"
+ HOL_BENECC_desc: "The establishment of the Benelux Air Command and Control Center (BENECC) aims to centralize and improve air command and control operations among Belgium, the Netherlands, and Luxembourg. This focus enhances the coordination and effectiveness of joint air missions and airspace management in the region."
  # Navy
  HOL_Rijksregiebureau_Maritieme_Industrie: "Rijksregiebureau Martitieme Industrie"
  HOL_Rijksregiebureau_Maritieme_Industrie_desc: "The establishment of the Rijksregiebureau Maritieme Maakindustrie marks a significant step towards centralizing and coordinating the maritime manufacturing industry in the Netherlands. This agency will streamline efforts to innovate and expand shipbuilding and marine engineering capabilities, ensuring that Dutch maritime industries remain competitive and technologically advanced."
@@ -450,6 +457,96 @@
  HOL_Defense_Investment.Rejected.t: "Dutch Defense Investment Rejected by [FROM.GetNameWithFlag]"
  HOL_Defense_Investment.Rejected.d: "The government of [FROM.GetNameWithFlag] has unfortunately rejected the Netherlands' proposal to invest in their defense industry. This decision limits our ability to deepen defense ties with [FROM.GetNameWithFlag] and gain access to critical military technologies. While this outcome is disappointing, we must look for alternative opportunities to strengthen our defense industry and partnerships elsewhere in Europe."
  HOL_Defense_Investment.Rejected.a: "A setback, but we will move forward"
+ HOL_Benelux.Air.01.t: "The Netherlands Proposes QRA Cooperation"
+ HOL_Benelux.Air.01.d: "The Netherlands has proposed the establishment of a Quick Reaction Alert (QRA) system. They invite Belgium to participate in a shared Benelux air defense system. Accepting this could strengthen our military cooperation within the region."
+ HOL_Benelux.Air.01.a: "Accept the QRA proposal"
+ HOL_Benelux.Air.01.b: "Decline the QRA proposal"
+ HOL_Benelux.Air.02.t: "Belgium and The Netherlands Propose QRA Cooperation"
+ HOL_Benelux.Air.02.d: "Following Belgium's acceptance of the QRA system, the Netherlands now extends an invitation to Luxembourg. This system would establish a joint air defense for the entire Benelux region. Will Luxembourg join this historic cooperation?"
+ HOL_Benelux.Air.02.a: "Accept the QRA proposal"
+ HOL_Benelux.Air.02.b: "Decline the QRA proposal"
+ HOL_Benelux.Air.03.t: "Belgium Agrees to Join QRA Benelux"
+ HOL_Benelux.Air.03.d: "Belgium has accepted the Netherlands' proposal to establish a joint Benelux air defense system. The next step is to extend the offer to Luxembourg."
+ HOL_Benelux.Air.03.a: "Excellent! Let’s move forward."
+ HOL_Benelux.Air.04.t: "Belgium Declines the QRA Proposal"
+ HOL_Benelux.Air.04.d: "Belgium has rejected the proposal to join the Benelux Quick Reaction Alert system, putting an end to the initiative."
+ HOL_Benelux.Air.04.a: "Unfortunate."
+ HOL_Benelux.Air.05.t: "Luxembourg Agrees to Join QRA Benelux"
+ HOL_Benelux.Air.05.d: "Luxembourg has accepted the invitation to join the Benelux Quick Reaction Alert system. A new era of air defense cooperation across the Netherlands, Belgium, and Luxembourg begins."
+ HOL_Benelux.Air.05.a: "Excellent! This will benefit the region."
+ HOL_Benelux.Air.06.t: "Luxembourg Rejects the QRA Proposal"
+ HOL_Benelux.Air.06.d: "Luxembourg has rejected the proposal to join the Benelux Quick Reaction Alert system. The full regional cooperation won't materialize."
+ HOL_Benelux.Air.06.a: "Disappointing."
+ HOL_Benelux.Air.07.t: "Benelux QRA Established"
+ HOL_Benelux.Air.07.d: "The Quick Reaction Alert (QRA) system has been successfully established between the Netherlands, Belgium, and Luxembourg. This new alliance will provide the region with a strong cooperative air defense."
+ HOL_Benelux.Air.07.a: "A strong alliance for the region!"
+ HOL_Benelux.Air.08.t: "Benelux QRA Established"
+ HOL_Benelux.Air.08.d: "The Quick Reaction Alert (QRA) system has been successfully established between Belgium, the Netherlands, and Luxembourg. This alliance will strengthen our air defense cooperation."
+ HOL_Benelux.Air.08.a: "A major step for our defense!"
+ HOL_Benelux.Air.09.t: "Benelux QRA Established"
+ HOL_Benelux.Air.09.d: "The Quick Reaction Alert (QRA) system has been successfully established between Luxembourg, Belgium, and the Netherlands. We are now part of a regional air defense system that will enhance our security."
+ HOL_Benelux.Air.09.a: "A step forward for Luxembourg’s defense."
+ HOL_Benelux.Air.10.t: "Proposal for Benelux Air Command and Control Center"
+ HOL_Benelux.Air.10.d: "The Netherlands has proposed the establishment of a Benelux Air Command and Control Center (BENECC) to strengthen the region’s air defense coordination. Should Belgium join, the next step will be to invite Luxembourg."
+ HOL_Benelux.Air.10.a: "Accept the BENECC proposal"
+ HOL_Benelux.Air.10.b: "Decline the BENECC proposal"
+ HOL_Benelux.Air.11.t: "Proposal for Benelux Air Command and Control Center"
+ HOL_Benelux.Air.11.d: "Following Belgium's acceptance of the Benelux Air Command and Control Center (BENECC) initiative, Luxembourg is now being invited to join. This would establish a joint air defense coordination system across the Benelux countries."
+ HOL_Benelux.Air.11.a: "Accept the BENECC proposal"
+ HOL_Benelux.Air.11.b: "Decline the BENECC proposal"
+ HOL_Benelux.Air.12.t: "Belgium Agrees to Join BENECC"
+ HOL_Benelux.Air.12.d: "Belgium has accepted the Netherlands’ proposal to establish the Benelux Air Command and Control Center (BENECC). The next step is to extend the offer to Luxembourg."
+ HOL_Benelux.Air.12.a: "Excellent! Let’s move forward."
+ HOL_Benelux.Air.13.t: "Belgium Rejects the BENECC Proposal"
+ HOL_Benelux.Air.13.d: "Belgium has declined the proposal to establish the Benelux Air Command and Control Center (BENECC), putting an end to the initiative."
+ HOL_Benelux.Air.13.a: "Unfortunate."
+ HOL_Benelux.Air.14.t: "Luxembourg Agrees to Join BENECC"
+ HOL_Benelux.Air.14.d: "Luxembourg has accepted the invitation to join the Benelux Air Command and Control Center (BENECC). With all three countries in agreement, the BENECC will now be established."
+ HOL_Benelux.Air.14.a: "Great! The plan is in motion."
+ HOL_Benelux.Air.15.t: "Luxembourg Rejects the BENECC Proposal"
+ HOL_Benelux.Air.15.d: "Luxembourg has rejected the proposal to establish the Benelux Air Command and Control Center (BENECC), halting the cooperative air defense initiative."
+ HOL_Benelux.Air.15.a: "Disappointing."
+ HOL_Benelux.Air.16.t: "BENECC Established"
+ HOL_Benelux.Air.16.d: "With the acceptance of all Benelux countries, the Benelux Air Command and Control Center (BENECC) has been successfully established. Our air defense coordination has been greatly strengthened."
+ HOL_Benelux.Air.16.a: "Excellent!"
+ HOL_Benelux.Air.17.t: "BENECC Established"
+ HOL_Benelux.Air.17.d: "The Benelux Air Command and Control Center (BENECC) has been successfully established, ensuring greater air defense coordination across the region."
+ HOL_Benelux.Air.17.a: "A major step forward for regional defense!"
+ HOL_Benelux.Air.18.t: "BENECC Established"
+ HOL_Benelux.Air.18.d: "Luxembourg has now joined the Benelux Air Command and Control Center (BENECC), reinforcing air defense coordination between Belgium, the Netherlands, and Luxembourg."
+ HOL_Benelux.Air.18.a: "A significant step for our defense!"
+ HOL_Benelux.Air.20.t: "Proposal for Benelux Air Navigation Committee"
+ HOL_Benelux.Air.20.d: "The Netherlands has proposed the establishment of a Benelux Air Navigation Committee (BNLC) to further strengthen the region’s air navigation coordination. Should Belgium join, the next step will be to invite Luxembourg."
+ HOL_Benelux.Air.20.a: "Accept the BNLC proposal"
+ HOL_Benelux.Air.20.b: "Decline the BNLC proposal"
+ HOL_Benelux.Air.21.t: "Proposal for Benelux Air Navigation Committee"
+ HOL_Benelux.Air.21.d: "Following Belgium's acceptance of the Benelux Air Navigation Committee (BNLC) initiative, Luxembourg is now being invited to join. This would establish a joint air navigation coordination system across the Benelux countries."
+ HOL_Benelux.Air.21.a: "Accept the BNLC proposal"
+ HOL_Benelux.Air.21.b: "Decline the BNLC proposal"
+ HOL_Benelux.Air.22.t: "Belgium Agrees to Join BNLC"
+ HOL_Benelux.Air.22.d: "Belgium has accepted the Netherlands’ proposal to establish the Benelux Air Navigation Committee (BNLC). The next step is to extend the offer to Luxembourg."
+ HOL_Benelux.Air.22.a: "Excellent! Let’s move forward."
+ HOL_Benelux.Air.23.t: "Belgium Rejects the BNLC Proposal"
+ HOL_Benelux.Air.23.d: "Belgium has declined the proposal to establish the Benelux Air Navigation Committee (BNLC), putting an end to the initiative."
+ HOL_Benelux.Air.23.a: "Unfortunate."
+ HOL_Benelux.Air.24.t: "Luxembourg Agrees to Join BNLC"
+ HOL_Benelux.Air.24.d: "Luxembourg has accepted the invitation to join the Benelux Air Navigation Committee (BNLC). With all three countries in agreement, the BNLC will now be established."
+ HOL_Benelux.Air.24.a: "Great! The plan is in motion."
+ HOL_Benelux.Air.25.t: "Luxembourg Rejects the BNLC Proposal"
+ HOL_Benelux.Air.25.d: "Luxembourg has rejected the proposal to establish the Benelux Air Navigation Committee (BNLC), halting the cooperative air navigation initiative."
+ HOL_Benelux.Air.25.a: "Disappointing."
+ HOL_Benelux.Air.26.t: "BNLC Established"
+ HOL_Benelux.Air.26.d: "With the acceptance of all Benelux countries, the Benelux Air Navigation Committee (BNLC) has been successfully established. Our air navigation coordination has been greatly strengthened."
+ HOL_Benelux.Air.26.a: "Excellent!"
+ HOL_Benelux.Air.27.t: "BNLC Established"
+ HOL_Benelux.Air.27.d: "The Benelux Air Navigation Committee (BNLC) has been successfully established, ensuring greater air navigation coordination across the region."
+ HOL_Benelux.Air.27.a: "A major step forward for regional air navigation!"
+ HOL_Benelux.Air.28.t: "BNLC Established"
+ HOL_Benelux.Air.28.d: "Luxembourg has now joined the Benelux Air Navigation Committee (BNLC), reinforcing air navigation coordination between Belgium, the Netherlands, and Luxembourg."
+ HOL_Benelux.Air.28.a: "A significant step for our air navigation!"
+
+
+
  ### Decisions
  HOL_ING_Group_strategy_category: "ING Group Strategies"
  HOL_ING_Group_strategy_category_desc: "As global economic cycles shift between periods of growth and recession, ING Bank is poised to capitalize on these fluctuations. Through a series of calculated financial maneuvers, ING can extend its influence over national and international markets, steering both recovery efforts and expansion booms. These decisions offer the Netherlands the ability to leverage the bank's financial clout to stimulate growth, manage risk, and maximize investment returns. By strategically adjusting loan policies, boosting consumer spending, and expanding global trade networks, ING will not only strengthen its market position but also solidify the Netherlands' standing as a financial powerhouse."
