--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -544,8 +544,23 @@
  HOL_Benelux.Air.28.t: "BNLC Established"
  HOL_Benelux.Air.28.d: "Luxembourg has now joined the Benelux Air Navigation Committee (BNLC), reinforcing air navigation coordination between Belgium, the Netherlands, and Luxembourg."
  HOL_Benelux.Air.28.a: "A significant step for our air navigation!"
-
-
+ HOL_Airbus_MRTT: "Purchase the Airbus MRTT"
+ HOL_Airbus_MRTT_desc: "The Netherlands has the opportunity to purchase the Airbus MRTT, a Multi-Role Tanker Transport aircraft. The more Benelux countries that participate, the lower the cost."
+ HOL_Benelux_Air.30.t: "Netherlands: Purchase the Airbus MRTT"
+ HOL_Benelux_Air.30.d: "The Netherlands has the opportunity to purchase 50 Airbus MRTT transport aircraft. The more Benelux countries that join in, the lower the cost."
+ HOL_Benelux_Air.30.a: "Buy the Airbus MRTT"
+ HOL_Benelux_Air.30.b: "Decline the offer"
+ HOL_Benelux_Air.31.t: "Belgium: Purchase the Airbus MRTT"
+ HOL_Benelux_Air.31.d: "Belgium has the opportunity to purchase 50 Airbus MRTT transport aircraft. The more Benelux countries that join in, the lower the cost."
+ HOL_Benelux_Air.31.a: "Buy the Airbus MRTT"
+ HOL_Benelux_Air.31.b: "Decline the offer"
+ HOL_Benelux_Air.32.t: "Luxembourg: Purchase the Airbus MRTT"
+ HOL_Benelux_Air.32.d: "Luxembourg has the opportunity to purchase 50 Airbus MRTT transport aircraft. The more Benelux countries that join in, the lower the cost."
+ HOL_Benelux_Air.32.a: "Buy the Airbus MRTT"
+ HOL_Benelux_Air.32.b: "Decline the offer"
+ HOL_Benelux_Air.33.t: "Airbus Cashback "
+ HOL_Benelux_Air.33.d: "The treasury is adjusted based on how many Benelux countries participated in purchasing the Airbus MRTT."
+ HOL_Benelux_Air.33.a: "Benelux Benefits"
 
  ### Decisions
  HOL_ING_Group_strategy_category: "ING Group Strategies"
