--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -191,10 +191,16 @@
  # Air Force
  HOL_Koninklijke_Luchtmacht: "Parvus Numero, Magnus Merito"
  HOL_Koninklijke_Luchtmacht_desc: "Embrace the motto Parvus numero, magnus merito (Small in number, great in merit) by focusing on maximizing the efficiency and effectiveness of the Dutch Air Force. This involves optimizing training programs, improving maintenance procedures, and leveraging advanced technology to ensure that every aircraft and airman contributes significantly to the mission."
- HOL_QRA_Benelux: "QRA Benelux"
+ HOL_QRA_Benelux: "QRA Benelux Arrangement"
  HOL_QRA_Benelux_desc: "The Quick Reaction Alert (QRA) Benelux initiative is a joint air defense arrangement between Belgium, the Netherlands, and Luxembourg. This focus aims to enhance the readiness and coordination of the Dutch Air Force in protecting the airspace over the Benelux region, ensuring rapid response to any aerial threats."
- HOL_BENECC: "BENECC"
+ HOL_BENECC: "BENECC Operation"
  HOL_BENECC_desc: "The establishment of the Benelux Air Command and Control Center (BENECC) aims to centralize and improve air command and control operations among Belgium, the Netherlands, and Luxembourg. This focus enhances the coordination and effectiveness of joint air missions and airspace management in the region."
+ HOL_BNLC: "Establish BNLC"
+ HOL_BNLC_desc: "The Benelux Air Navigation Committee (BNLC) focuses on improving air traffic management and safety in the Benelux region. This initiative enhances the collaboration between civil and military air traffic control, ensuring the seamless integration of air operations."
+ HOL_Airbus_MRTT: "Joint Order Airbus MRTT"
+ HOL_Airbus_MRTT_desc: "Investing in the Airbus A330 Multi Role Tanker Transport (MRTT) aircraft enhances the Dutch Air Force's air-to-air refueling and strategic airlift capabilities. This focus ensures extended operational reach and improved support for both national and international missions."
+ HOL_Join_JSF: "Join JSF Program"
+ HOL_Join_JSF_desc: "The Netherlands' participation in the Joint Strike Fighter (JSF) program involves the procurement of F-35 Lightning II aircraft. This focus ensures the Dutch Air Force is equipped with state-of-the-art stealth fighters, enhancing air superiority and strike capabilities."
  # Navy
  HOL_Rijksregiebureau_Maritieme_Industrie: "Rijksregiebureau Martitieme Industrie"
  HOL_Rijksregiebureau_Maritieme_Industrie_desc: "The establishment of the Rijksregiebureau Maritieme Maakindustrie marks a significant step towards centralizing and coordinating the maritime manufacturing industry in the Netherlands. This agency will streamline efforts to innovate and expand shipbuilding and marine engineering capabilities, ensuring that Dutch maritime industries remain competitive and technologically advanced."
