1 hour for 2 focusses

--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -201,6 +201,11 @@
  HOL_Airbus_MRTT_desc: "Investing in the Airbus A330 Multi Role Tanker Transport (MRTT) aircraft enhances the Dutch Air Force's air-to-air refueling and strategic airlift capabilities. This focus ensures extended operational reach and improved support for both national and international missions."
  HOL_Join_JSF: "Join JSF Program"
  HOL_Join_JSF_desc: "The Netherlands' participation in the Joint Strike Fighter (JSF) program involves the procurement of F-35 Lightning II aircraft. This focus ensures the Dutch Air Force is equipped with state-of-the-art stealth fighters, enhancing air superiority and strike capabilities."
+ HOL_Join_JSF_tt: "When §Y5th Generation Light Aircraft§! is researched, §G50§! §YF-35A§! will be added to your stockpile."
+ HOL_Buy_F35C: "Join F35C Program"
+ HOL_Buy_F35C_desc: "The procurement of the F-35C Lightning II aircraft provides the Dutch Air Force with a carrier-capable variant of the advanced stealth fighter. This focus enhances the Netherlands' ability to project air power from both land bases and aircraft carriers, offering unmatched versatility and combat effectiveness."
+ HOL_Buy_F35C_tt: "When §Y5th Generation Light Aircraft§! is researched, §G50§! §YF-35C§! will be added to your stockpile."
+
  # Navy
  HOL_Rijksregiebureau_Maritieme_Industrie: "Rijksregiebureau Martitieme Industrie"
  HOL_Rijksregiebureau_Maritieme_Industrie_desc: "The establishment of the Rijksregiebureau Maritieme Maakindustrie marks a significant step towards centralizing and coordinating the maritime manufacturing industry in the Netherlands. This agency will streamline efforts to innovate and expand shipbuilding and marine engineering capabilities, ensuring that Dutch maritime industries remain competitive and technologically advanced."
@@ -567,7 +572,12 @@
  HOL_Benelux_Air.33.t: "Airbus Cashback "
  HOL_Benelux_Air.33.d: "The treasury is adjusted based on how many Benelux countries participated in purchasing the Airbus MRTT."
  HOL_Benelux_Air.33.a: "Benelux Benefits"
-
+ HOL_JSF_Grant_F35A.t: "F-35A Arrived"
+ HOL_JSF_Grant_F35A.d: "The development of the F-35A has been completed, and with the 5th Generation Light Aircraft technology fully researched, we can now deploy 50 units of the F-35A into active service."
+ HOL_JSF_Grant_F35A.a: "Deploy the F-35A"
+ HOL_JSF_Grant_F35C.t: "F-35C Arrived"
+ HOL_JSF_Grant_F35C.d: "With the completion of the 5th Generation Carrier-Capable Aircraft research, we can now deploy 50 units of the F-35C to serve in carrier operations."
+ HOL_JSF_Grant_F35C.a: "Deploy the F-35C"
  ### Decisions
  HOL_ING_Group_strategy_category: "ING Group Strategies"
  HOL_ING_Group_strategy_category_desc: "As global economic cycles shift between periods of growth and recession, ING Bank is poised to capitalize on these fluctuations. Through a series of calculated financial maneuvers, ING can extend its influence over national and international markets, steering both recovery efforts and expansion booms. These decisions offer the Netherlands the ability to leverage the bank's financial clout to stimulate growth, manage risk, and maximize investment returns. By strategically adjusting loan policies, boosting consumer spending, and expanding global trade networks, ING will not only strengthen its market position but also solidify the Netherlands' standing as a financial powerhouse."
