--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -211,6 +211,10 @@
  HOL_Buy_Saab_JAS39_desc: "The procurement of Saab JAS39 Gripen fighters provides the Dutch Air Force with a versatile and cost-effective multirole aircraft. This focus enhances air defense, ground support, and reconnaissance capabilities, ensuring operational flexibility."
  HOL_Buy_MQ9_Reaper: "Buy MQ-9 Reaper"
  HOL_Buy_MQ9_Reaper_desc: "Investing in MQ-9 Reaper drones enhances the Dutch Air Force's reconnaissance and strike capabilities. These unmanned aerial vehicles (UAVs) provide real-time intelligence, surveillance, and precision strike options, significantly boosting operational effectiveness."
+ HOL_Defensie_Helikopter_Commando: "Defensie Helikopter Commando Creation"
+ HOL_Defensie_Helikopter_Commando_desc: "The Defensie Helikopter Commando (DHC) oversees the operations of all military helicopters within the Dutch Armed Forces. This focus aims to enhance the capabilities, training, and coordination of the helicopter fleet, supporting both national and international missions."
+ HOL_CH47D_Modernization: "CH-47D Modernization"
+ HOL_CH47D_Modernization_desc: "The modernization of the CH-47D Chinook helicopters involves upgrading avionics, engines, and cargo systems. This focus ensures that these heavy-lift helicopters remain effective and reliable for transport, medevac, and support missions"
  # Navy
  HOL_Rijksregiebureau_Maritieme_Industrie: "Rijksregiebureau Martitieme Industrie"
  HOL_Rijksregiebureau_Maritieme_Industrie_desc: "The establishment of the Rijksregiebureau Maritieme Maakindustrie marks a significant step towards centralizing and coordinating the maritime manufacturing industry in the Netherlands. This agency will streamline efforts to innovate and expand shipbuilding and marine engineering capabilities, ensuring that Dutch maritime industries remain competitive and technologically advanced."
