--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -215,6 +215,8 @@
  HOL_Defensie_Helikopter_Commando_desc: "The Defensie Helikopter Commando (DHC) oversees the operations of all military helicopters within the Dutch Armed Forces. This focus aims to enhance the capabilities, training, and coordination of the helicopter fleet, supporting both national and international missions."
  HOL_CH47D_Modernization: "CH-47D Modernization"
  HOL_CH47D_Modernization_desc: "The modernization of the CH-47D Chinook helicopters involves upgrading avionics, engines, and cargo systems. This focus ensures that these heavy-lift helicopters remain effective and reliable for transport, medevac, and support missions"
+ HOL_AH46D_Upgrade: "AH-64D Upgrade"
+ HOL_AH46D_Upgrade_desc: "Upgrading the AH-64D Apache attack helicopters includes enhancing their avionics, weapon systems, and survivability. This focus boosts the combat capabilities of the Dutch Air Force, ensuring these helicopters can effectively perform close air support and anti-armor missions."
  # Navy
  HOL_Rijksregiebureau_Maritieme_Industrie: "Rijksregiebureau Martitieme Industrie"
  HOL_Rijksregiebureau_Maritieme_Industrie_desc: "The establishment of the Rijksregiebureau Maritieme Maakindustrie marks a significant step towards centralizing and coordinating the maritime manufacturing industry in the Netherlands. This agency will streamline efforts to innovate and expand shipbuilding and marine engineering capabilities, ensuring that Dutch maritime industries remain competitive and technologically advanced."
